[tool.poetry]
name = "peer-py"
version = "0.1.0"
description = ""
authors = ["bose-sayan <sayan.bose.lmg.2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bencode-py = "^4.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
